[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
chrono = "0.4.23"
regex = "1"
itertools = "0.14.0"
num = "0.4"
array2d = "0.3.0"
ndarray = "0.17"
indexmap = "2.1.0"
colored = "3"
copypasta = "0.10.2"

[profile.release]
overflow-checks = true